--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "author": "Enzo Haussecker",
+    "author": "Flanker",
     "dependencies": {
         "animate.css": "^3.7.2",
         "bootstrap": "^4.4.1",
