--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,22 @@
-.dfx/
 .DS_Store
-.idea/
-.vscode/
-build/
-canisters/
-crc8.pyc
-node_modules/
-nohup.out
+node_modules
+/dist
+example.html
+favicon.ico
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
