--- a/package.json
+++ b/package.json
@@ -1,37 +1,61 @@
 {
-    "author": "Flanker",
+    "name": "manage_assets",
+    "version": "0.2.0",
+    "author": "Flanker@Hashquark",
+    "scripts": {
+        "build": "webpack"
+    },
     "dependencies": {
-        "animate.css": "^3.7.2",
-        "bootstrap": "^4.4.1",
-        "copy-webpack-plugin": "^5.1.1",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.5.0",
-        "popper.js": "^1.16.1",
-        "showdown": "^1.9.1",
-        "tweetnacl": "^1.0.3",
-        "typed.js": "^2.0.11",
-        "wowjs": "^1.1.3"
+        "axios": "^0.18.0",
+        "babel-polyfill": "^6.26.0",
+        "element-ui": "^2.11.1",
+        "mavon-editor": "^2.6.17",
+        "vue": "^2.6.10",
+        "vue-cropperjs": "^3.0.0",
+        "vue-i18n": "^8.10.0",
+        "vue-quill-editor": "^3.0.6",
+        "vue-router": "^3.0.3",
+        "vue-schart": "^2.0.0",
+        "vuedraggable": "^2.17.0"
     },
     "devDependencies": {
-        "@dfinity/agent": "/home/flanker/.cache/dfinity/versions/0.5.11/js-user-library",
-        "css-loader": "^3.5.2",
-        "node-crc": "^1.3.0",
-        "node-fetch": "^2.6.0",
-        "node-webcrypto-ossl": "^2.0.1",
-        "style-loader": "^1.1.3",
+        "@dfinity/agent": "0.6.2",
         "terser-webpack-plugin": "2.2.2",
-        "webpack": "4.41.3",
-        "webpack-cli": "3.3.10",
-        "@babel/core": "^7.9.6",
-        "parcel-bundler": "^1.12.4",
-        "file-loader": "^6.0.0",
-        "base64-inline-loader": "1.1.1"
-    },
-    "license": "Apache 2.0 with LLVM Exception",
-    "name": "nnsexp_assets",
-    "scripts": {
-        "build": "webpack",
-        "sim": "node scripts/sim"
-    },
-    "version": "1.0.0"
+        "autoprefixer": "^7.1.2",
+        "babel-core": "^6.22.1",
+        "babel-helper-vue-jsx-merge-props": "^2.0.3",
+        "babel-loader": "^7.1.1",
+        "babel-plugin-dynamic-import-webpack": "^1.1.0",
+        "babel-plugin-syntax-jsx": "^6.18.0",
+        "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-plugin-transform-vue-jsx": "^3.5.0",
+        "babel-preset-env": "^1.3.2",
+        "babel-preset-stage-2": "^6.22.0",
+        "chalk": "^2.0.1",
+        "copy-webpack-plugin": "^4.0.1",
+        "css-loader": "^3.6.0",
+        "file-loader": "^1.1.4",
+        "friendly-errors-webpack-plugin": "^1.6.1",
+        "html-webpack-plugin": "^4.3.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "node-notifier": "^5.1.2",
+        "optimize-css-assets-webpack-plugin": "^3.2.0",
+        "ora": "^1.2.0",
+        "portfinder": "^1.0.13",
+        "postcss-import": "^11.0.0",
+        "postcss-loader": "^3.0.0",
+        "postcss-url": "^7.2.1",
+        "rimraf": "^2.6.0",
+        "semver": "^5.3.0",
+        "shelljs": "^0.7.6",
+        "url-loader": "^0.5.8",
+        "vue-loader": "^15.9.3",
+        "vue-style-loader": "^3.0.1",
+        "vue-template-compiler": "^2.5.2",
+        "webpack": "^4.43.0",
+        "webpack-bundle-analyzer": "^2.9.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^4.1.0"
+    }
 }
