--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "version": "0.2.0",
     "author": "Flanker@Hashquark",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "test": "node scripts/test"
     },
     "dependencies": {
         "axios": "^0.18.0",
         "babel-polyfill": "^6.26.0",
-        "element-ui": "^2.11.1",
+        "big.js": "^5.2.2",
+        "element-ui": "^2.13.2",
         "mavon-editor": "^2.6.17",
         "vue": "^2.6.10",
         "vue-cropperjs": "^3.0.0",
@@ -19,7 +21,7 @@
         "vuedraggable": "^2.17.0"
     },
     "devDependencies": {
-        "@dfinity/agent": "0.6.2",
+        "@dfinity/agent": "0.6.4",
         "terser-webpack-plugin": "2.2.2",
         "autoprefixer": "^7.1.2",
         "babel-core": "^6.22.1",
@@ -34,11 +36,14 @@
         "chalk": "^2.0.1",
         "copy-webpack-plugin": "^4.0.1",
         "css-loader": "^3.6.0",
+        "echarts": "^4.1.0",
         "file-loader": "^1.1.4",
         "friendly-errors-webpack-plugin": "^1.6.1",
         "html-webpack-plugin": "^4.3.0",
         "mini-css-extract-plugin": "^0.9.0",
+        "node-fetch": "^2.6.0",
         "node-notifier": "^5.1.2",
+        "node-webcrypto-ossl": "^2.0.1",
         "optimize-css-assets-webpack-plugin": "^3.2.0",
         "ora": "^1.2.0",
         "portfinder": "^1.0.13",
@@ -53,7 +58,7 @@
         "vue-style-loader": "^3.0.1",
         "vue-template-compiler": "^2.5.2",
         "webpack": "^4.43.0",
-        "webpack-bundle-analyzer": "^2.9.0",
+        "webpack-bundle-analyzer": "^3.3.2",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^4.1.0"
