--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "big.js": "^5.2.2",
         "element-ui": "^2.13.2",
         "mavon-editor": "^2.6.17",
+        "moment": "^2.27.0",
         "vue": "^2.6.10",
         "vue-cropperjs": "^3.0.0",
         "vue-i18n": "^8.10.0",
@@ -29,6 +30,7 @@
         "babel-loader": "^7.1.1",
         "babel-plugin-dynamic-import-webpack": "^1.1.0",
         "babel-plugin-syntax-jsx": "^6.18.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-runtime": "^6.22.0",
         "babel-plugin-transform-vue-jsx": "^3.5.0",
         "babel-preset-env": "^1.3.2",
